fixed issue with overflowing white space due to bootstrap weirdness with margins on containers.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,8 +3,12 @@
     background-size: 100% 100%;
     height: 750px;
 }
+html, body {
+   overflow-x: hidden;
+}
+
 .navColor{
-background-color: #0B0C10!important;
+  background-color: #0B0C10!important;
 }
 .background {
   background: rgb(255,255,255);
@@ -16,7 +20,7 @@ background-color: #0B0C10!important;
   
     display: flex;
     align-items: center;
-  }
+}
 .intro {
     font-size: 30px;
     color: white;
@@ -133,8 +137,8 @@ div a {
       width: 50px;
     }
     .meImg {
-      width: 100%;
-      height: 100%;
+      width: 250px;
+      height: 250px;
       margin: auto;
       float: none;
       
